modernize for Java 21